# ORCA

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  tf_octa_c.py
.github/workflows/: ci.yml
custom_class/: index.html
docs/: custom_class.md  index.md  running_orca.md  running_rapid.md  setup.md
examples/: main.py  test.py  test2.py  test3.py  test4.py
running_orca/: index.html
search/: search_index.json
setup/: index.html
src/RAPID/: __init__.py  rapid.py
src/RAPID/geometry/: README.md  base_geometry.py  gds_to_palace.py
src/RAPID/geometry/examples/: transformer.py
src/RAPID/geometry/examples/transformer/: tf_octa_c_ports.py  tf_octa_c_ports.xml
src/RAPID/gui/: README.md
src/RAPID/models/: README.md
src/RAPID/simulation/: README.md  simulate.py
src/RAPID/training/: README.md
src/orca/: __init__.py  __main__.py  logger.py  orca.py
src/orca/checkpoints/: README.md  download_checkpoints.sh
src/orca/geometry/: README.md  base_geometry.py  input_parameters.py
src/orca/geometry/cells/: transformer.py
src/orca/geometry/examples/transformer/: test.py  tf_octa_c_ports.py  tf_octa_c_ports.simcfg  transformer_factory.py
src/orca/geometry/presets/: tf_octa_c_ports.py  tf_octa_c_ports.simcfg
src/orca/gui/: README.md  app.py  inference_gui.py  inference_window.py  main_gui.py  pipeline_window.py  simulate_train_gui.py  theme.py  themes.py  utils.py  welcome_dialog.py
src/orca/gui/widgets/: geometry_selector.py  stage_widget.py
src/orca/inference/: __init__.py  inference_engine.py
src/orca/models/: README.md
src/orca/pipeline/: export_onnx_stage.py  gds_conversion_stage.py  gds_gen_stage.py  orca.py  pipeline_stage.py  simulation_stage.py  test_model_stage.py  training_stage.py
src/orca/simulation/: README.md  combine_snp_results.py  gds_converter.py  read_simconfig.py  simulate.py
src/orca/training/: README.md  dataset.py  feature_transform.py  normalize.py  onnx_wrapper.py  train.py
src/orca/training/datasets/: base_dataset.py  dataloader.py  geo_to_ntwk.py  geo_to_s_param.py  geo_to_s_param_single_f.py
src/orca/training/models/: mlp.py  rnn.py  transformer.py
src/orca/utils/: class_finder.py  folder_structure.py  gds_converter.py  postprocessing.py
src/rapid/: __init__.py  rapid.py
src/rapid/geometry/: base_geometry.py
src/rapid/geometry/examples/transformer/: REFERENCE.gds  tf_octa_c_ports.py  tf_octa_c_ports.simcfg
src/rapid/simulation/: read_simconfig.py  simulate.py
