[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca"
version = "0.0.1"
description = "ORCA - Open RF Circuit Automation"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "David Lurz", email = "david.lurz@fau.de"},
    {name = "Gianluca Simone", email = "gianluca.simone@fau.de"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "scikit-rf",
    "numpy",
    "PySide6",
    "torch",
    "pandas",
]

[project.optional-dependencies]
train = [
    "gdsfactory",
    "gds2palace",
]

[project.scripts]
orca = "orca.gui.main_gui:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
orca = "src/orca"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 79