[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca"
version = "1.1.0"
description = "ORCA - Open RF Circuit Automation"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "David Lurz", email = "david.lurz@fau.de"},
    {name = "Gianluca Simone", email = "gianluca.simone@fau.de"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "scikit-rf",
    "scikit-learn",
    "gdsfactory",
    "ihp-gdsfactory @ git+https://github.com/gdsfactory/IHP.git",
    "gds2palace",
    "numpy",
    "pandas",
    "PySide6",
    "colorlog",
    "matplotlib",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "optuna",
    "onnx",
    "onnxruntime",
    "onnxscript",
]

[project.scripts]
orca = "orca.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
orca = "src/orca"

[tool.setuptools.package-data]
"orca" = ["**/*.simcfg", "**/*.xml"]

[tool.black]
line-length = 79
target-version = ['py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 79